--- a/vite-react/Dockerfile
+++ b/vite-react/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:22-alpine as builder
+FROM node:22-alpine AS builder
 
 WORKDIR /app
 
@@ -8,7 +8,7 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-FROM nginx:alpine
+FROM nginx:alpine-latest
 
 COPY --from=builder /app/dist /usr/share/nginx/html
 
